--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,82 @@ font-family: 'Dancing Script', cursive;
     // for the texts and headings
 font-family: 'Poppins', sans-serif;
 */
+*,
+*::before,
+*::after{
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+}
+html{
+    font-size: 62.5%;
+}
+.hero{
+    width: 100vw;
+    height: 100vh;  
+}
+
+
+.left{
+    width: 35%;
+    height: 100vh;
+    background: url(img/halie-west.jpg) no-repeat center;
+    background-size: cover;
+    position: relative;
+    float: left;
+    margin-right: 3rem;
+    
+}
+.img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0, 0.5);
+    width: 100%;
+    padding: 1rem;
+    position: absolute;
+    top: 20%;
+}
+.img-container img{
+    width: 65px;
+    height: 80px;
+    margin-right: 1rem;
+}
+.img-container h1{
+    font-size: 5rem;
+    text-transform: uppercase;
+    color: #fff;
+    font-family: 'Dancing Script', cursive;
+}
+
+
+
+.right {
+ background-color: #f9fafb;
+ height: 100vh;
+ width: 100%;
+ font-family: 'Poppins', sans-serif;
+}
+
+.right .header-texts{
+   width: 100%;
+    max-width: 690px;
+    margin: 0 auto;
+   padding: 10rem 0 0 4rem;
+}
+
+.right .header-texts p {
+    font-weight: 700;
+    font-size: 1.7rem;
+}
+.right .header-texts p:first-of-type{
+    margin-bottom: 2rem;
+}
+
+
+
+
+
+
+
 
