--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ padding: 0;
 }
 html{
     font-size: 62.5%;
+    font-family: 'Poppins', sans-serif
 }
 .hero{
     width: 100vw;
@@ -47,7 +48,7 @@ html{
     margin-right: 1rem;
 }
 .img-container h1{
-    font-size: 5rem;
+    font-size: calc(1.5rem + 2vw);
     text-transform: uppercase;
     color: #fff;
     font-family: 'Dancing Script', cursive;
@@ -56,7 +57,7 @@ html{
 
 
 .right {
- background-color: #f9fafb;
+ background-color: #eceded;
  height: 100vh;
  width: 100%;
  font-family: 'Poppins', sans-serif;
@@ -71,14 +72,87 @@ html{
 
 .right .header-texts p {
     font-weight: 700;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
+    margin-right: 3rem;
+    font-family: inherit;
 }
-.right .header-texts p:first-of-type{
-    margin-bottom: 2rem;
+.right .header-texts p:last-of-type{
+    margin: 2.5rem 0 4rem 0;
+}
+
+.form-container{
+    width: 100%;
+    background-color:#ffffff;
+    min-height: 30vh;
+    padding: 2rem;
+    box-shadow: 2px 2px 10px #888888;
+}
+.form-container .form{
+    padding-bottom: 2rem;
+    display: grid;
+    grid-template-columns: 250px 250px;
+}
+
+
+.form-container h2{
+    font-size: 2rem;
+    display: inline-block;
+    margin-bottom: 1rem;
+    font-family: inherit;
+}
+
+.form-container .form label{
+    display: block;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-family: inherit;
+}
+.form-container .form  input{
+    padding: 0.5rem;
+    font-family: inherit;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #000;
+    outline: none;
+}
+.form-container .form > div{
+    margin: 0.7rem 5rem 0.7rem 0;
 }
 
 
 
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+input[type="tel"]:focus
+{
+    outline: 2px solid #466edf;
+    border: none;
+    box-shadow: 2px 2px 4px #888888;
+}
+
+
+.button-container{
+    margin-top: 2rem;
+}
+.button-container button{
+background-color: #596d48;
+color: #fff;
+padding: 8px 24px;
+outline: none;
+border: none;
+border-radius: 5px;
+text-transform: capitalize;
+font-weight: 600;
+box-shadow: 2px 2px 4px #888888;
+}
+
+.button-container p {
+    margin-top: 2rem;
+    font-size: 1.3rem;
+}
 
 
 
